Fix auto zoom in on mobile view

--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 body {
     background-color: black;
-    position: absolute;
-    width: auto;
 }
 
 nav {
